tests/paczka1/small_fuzzy/27902357.err
Error in line 6: HSiI7Tjf2BJ A849 G32,8
Error in line 4: HSiI7Tjf2BJ A849 68,8
Error in line 7: 2TPYT S799 93,7
